--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "antlr4ts": "^0.5.0-alpha.4",
     "cypress-multi-reporters": "^1.6.3",
     "cypress-parallel": "^0.13.0",
+    "json5": "^2.2.3",
     "mime": "^3.0.0",
     "mocha": "10.1.0",
     "performance-now": "^2.1.0",
